add more details to my portfolio

--- a/myportfolio.html
+++ b/myportfolio.html
@@ -15,7 +15,7 @@
         }
         .header {
             background-color: #007BFF;
-            color: white;
+            color: rgb(20, 13, 13);
             padding: 20px 0;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -114,34 +114,34 @@
     <div class="container">
         <div class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm [Your Name], a passionate web developer with experience in creating dynamic and responsive websites. I love turning complex problems into simple, beautiful, and intuitive designs. When I'm not coding, you'll find me exploring new technologies and learning new skills.</p>
+            <p>Hello! I'm Simon Peter Makobi, a passionate web developer with experience in creating dynamic and responsive websites. 
+                I love turning complex problems into simple, beautiful, and intuitive designs. 
+                When I'm not coding, you'll find me exploring new technologies and learning new skills.</p>
         </div>
         <div class="projects">
             <h2>Projects</h2>
             <div class="project-list">
                 <div class="project-item">
-                    <h3>Project 1</h3>
-                    <p>This is a brief description of project 1. It showcases my skills in HTML, CSS, and JavaScript. [Add more details about the project here]</p>
+                    <h3>Mobi-care bed project</h3>
+                    <p>Mobi-care Bed is a bed which is meant to tackle two pressing challenges in our health system, the pressure sore
+                        and doctor-patient infections resulting from constant doctor to patient interactions.
+                        This bed can seemlessly transform into a chair and switching to different positions as the patient desires.
+                    </p>
                 </div>
                 <div class="project-item">
-                    <h3>Project 2</h3>
+                    <h3>Enhancing Urban traffic Management</h3>
                     <p>This is a brief description of project 2. It highlights my experience with responsive design and user interface development. [Add more details about the project here]</p>
                 </div>
                 <div class="project-item">
-                    <h3>Project 3</h3>
-                    <p>This is a brief description of project 3. It focuses on my ability to work with back-end technologies and databases. [Add more details about the project here]</p>
-                </div>
-                <div class="project-item">
-                    <h3>Project 4</h3>
-                    <p>This is a brief description of project 4. It demonstrates my skills in full-stack development. [Add more details about the project here]</p>
-                </div>
+                    
             </div>
         </div>
         <div class="contact">
             <h2>Contact Me</h2>
             <p>If you'd like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+            <p>Email: <a href="mailto:makobisimon@gmail.com.com">makobisimon@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/simon-peter-makobi-b7bb8b2b3/" target="_blank">linkedin.com/in/Simon Peter Makobi
+            </a></p>
         </div>
     </div>
 </body>
