--- a/myportfolio.html
+++ b/myportfolio.html
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Simon Peter Makobi, a passionate web developer with experience in creating dynamic and responsive websites. 
+            <p>Hello! I'm Simon Peter Makobi,from Kabale University , am a passionate web developer with experience in creating dynamic and responsive websites. 
                 I love turning complex problems into simple, beautiful, and intuitive designs. 
                 When I'm not coding, you'll find me exploring new technologies and learning new skills.</p>
         </div>
